--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 <i class="material-icons md-light md-36">build</i>
             </div>
             <div class="menuText">Variable Settings<br>Other things</div>
-            <input id="image1Input" type="text">
-            <input id="image2Input" type="text">
-            <input id="image3Input" type="text">
+            <input id="image1Input" type="text" placeholder="Enter Image URL">
+            <input id="image2Input" type="text" placeholder="Enter Image URL">
+            <input id="image3Input" type="text" placeholder="Enter Image URL">
             <button id="addImagesBtn">submit</button>
         </div>
         <div class="menu" id="showCode">
