made links back to home

--- a/cardFlip/index.html
+++ b/cardFlip/index.html
@@ -18,9 +18,10 @@
 <div id="main" style="width: 100vw; height:100vh;">
     <!--MENU-->
     <div id="leftMenu">
-        <div class="menu" id="title">
+        <a href="../"><div class="menu" id="title">
             <p>Effect Maker</p>
-        </div>
+            </div>
+        </a>
         <!--PRESETS-->
         <div class="menu" id="presets">
             <div class="circle icon">
