--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <div class="wrapper">
     <div class="header">Effect Maker</div>
     <div id="EffectsMenuWrapper">
-        <div class="effectContainer" id="emitterContainer">Emitter</div>
-        <div class="effectContainer" id="cardFlipContainer">Card Flip</div>
+        <a href="emitter/"><div class="effectContainer" id="emitterContainer">Emitter</div></a>
+        <a href="cardFlip/"><div class="effectContainer" id="cardFlipContainer">Card Flip</div></a>
         <!--TODO create effectContainers dynamically-->
     </div>
 </div>
