--- a/emitter/index.html
+++ b/emitter/index.html
@@ -12,14 +12,16 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="../effectCode/particles.js"></script>
     <script src="emitter.js"></script>
-    <title>Effect Maker</title>
+    <title>Effect Maker : Emitter Effect</title>
 </head>
 <body>
 <div id="main" style="width: 100vw; height:100vh;">
     <div id="leftMenu">
-        <div class="menu" id="title">
-            <p>Effect Maker</p>
-        </div>
+        <a href="../index.html">
+            <div class="menu" id="title">
+                <p>Effect Maker</p>
+            </div>
+        </a>
         <div class="menu" id="presets">
             <div class="circle icon">
                 <i class="material-icons md-light md-36">bookmark</i>
@@ -35,14 +37,17 @@
             <input id="image2Input" class="textInput" type="text">
             <input id="image3Input" class="textInput" type="text"><br>
             <!--Button-->
-            <button id="addImagesBtn">submit</button><br>
+            <button id="addImagesBtn">submit</button>
+            <br>
             <!--Min slider-->
             <label for="minSizeSlider">Minimum Size: </label>
-            <output for="minSizeSlider" id="minSizeValue">10</output><br>
+            <output for="minSizeSlider" id="minSizeValue">10</output>
+            <br>
             <input type="range" min="0" max="100" value="5" oninput="updateMinSizeOuput(value)" id="minSizeSlider"><br>
             <!--Max slider-->
             <label for="maxSizeSlider">Maximum Size: </label>
-            <output for="maxSizeSlider" id="maxSizeValue">20</output><br>
+            <output for="maxSizeSlider" id="maxSizeValue">20</output>
+            <br>
             <input type="range" min="0" max="100" value="15" oninput="updateMaxSizeOuput(value)" id="maxSizeSlider"><br>
         </div>
         <div class="menu" id="showCode">
