styled menus, added image preview to inputs

--- a/cardFlip/index.html
+++ b/cardFlip/index.html
@@ -23,14 +23,14 @@
             </div>
         </a>
         <!--PRESETS-->
-        <div class="menu" id="presets">
+        <div class="menu presets">
             <div class="circle icon">
                 <i class="material-icons md-light md-36">bookmark</i>
             </div>
             <div class="menuText">Preset Options</div>
         </div>
         <!--PARAMETERS-->
-        <div class="menu" id="paramSettings">
+        <div class="menu paramSettings">
             <div class="circle icon">
                 <i class="material-icons md-light md-36">build</i>
             </div>
