preview images change when added with + button

--- a/emitter/index.html
+++ b/emitter/index.html
@@ -34,21 +34,20 @@
             </div>
             <div class="menuText">Variable Settings</div>
         </div>
-
         <div class="settingContainer">
             <div class="imgPreview" id="imgPreview1"></div>
             <input id="image1Input" class="textInput" type="text">
-            <div class="addImagesButton">+</div>
+            <div class="addImagesButton imageButton1">+</div>
         </div>
         <div class="settingContainer">
             <div class="imgPreview" id="imgPreview2"></div>
             <input id="image2Input" class="textInput" type="text">
-            <div class="addImagesButton">+</div>
+            <div class="addImagesButton imageButton2">+</div>
         </div>
         <div class="settingContainer">
             <div class="imgPreview" id="imgPreview3"></div>
             <input id="image3Input" class="textInput" type="text">
-            <div class="addImagesButton" >+</div>
+            <div class="addImagesButton imageButton3" >+</div>
         </div>
         <!--Min slider-->
         <div class="settingContainer slider">
